--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^18.8.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.0"
   },
@@ -26,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon ./api/server.js"
+    "server": "node ./api/server.js"
   },
   "eslintConfig": {
     "extends": [
